--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
-  background-color: #004C89;
+
+  background: -webkit-linear-gradient(left, #e0dae3, #dde1e3);
+  background: -moz-linear-gradient(left, #e0dae3, #dde1e3);
+  background: -ms-linear-gradient(left, #e0dae3, #dde1e3);
+  background: -o-linear-gradient(left, #e0dae3, #dde1e3);
+  background: linear-gradient(to right, #e0dae3, #dde1e3);
 }
 
 code {
